--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "babel-preset-es2015": "^6.22.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "eslint": "^3.14.0",
+    "eslint-config-vue": "^2.0.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-vue": "^1.0.0",
     "file-loader": "^0.9.0",
     "lodash-webpack-plugin": "^0.11.0",
     "vue-loader": "^10.0.0",
