--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-vue": "^1.0.0",
     "file-loader": "^0.9.0",
     "lodash-webpack-plugin": "^0.11.0",
+    "node-sass": "^4.3.0",
+    "sass-loader": "^4.1.1",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
