--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-vue": "^1.0.0",
     "file-loader": "^0.9.0",
+    "firebase": "^3.6.7",
     "lodash-webpack-plugin": "^0.11.0",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
